--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,8 @@ services:
     container_name: sql_server.g
     hostname: sql_server.g
     restart: no
-    network_mode: bridge
+    networks:
+      - internal
     volumes:
       - ./data:/opt/oracle/oradata
       - ./example_tables/:/container-entrypoint-initdb.d
@@ -20,6 +21,41 @@ services:
     container_name: dbeaver.g
     hostname: dbeaver.g
     restart: no
-    network_mode: bridge
+    networks:
+      - internal
     ports:
       - 8978:8978
+    depends_on:
+      - sql_server
+
+  php:
+    image: php:fpm-alpine
+    container_name: php.g
+    hostname: php.g
+    networks:
+      - internal
+    volumes:
+      - ./php_code/:/files:ro
+    ports:
+      - 9000:9000
+    restart: no
+    depends_on:
+      - dbeaver
+
+  nginx:
+    build: nginx
+    container_name: nginx.g
+    hostname: nginx.g
+    volumes:
+      - ./php_code/:/files:ro
+    networks:
+      - internal
+    ports:
+      - 8080:80
+    restart: no
+    depends_on:
+      - php
+
+networks:
+  internal:
+    driver: bridge
