--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,29 +1,55 @@
-FROM ghcr.io/oracle/oraclelinux:8
+FROM php:8.1-fpm
 
-RUN dnf -y install oraclelinux-developer-release-el8 oracle-instantclient-release-el8 && \
-    dnf -y module enable php:7.4 php-oci8:21c && \
-    dnf -y install php-cli \
-                   php-common \
-                   php-fpm \
-                   php-json \
-                   php-mbstring \
-                   php-mysqlnd \
-                   php-pdo \
-                   php-soap \
-                   php-xml \
-                   php-oci8-21c && \
-    rm -rf /var/cache/dnf \
-    && \
-    # Enable external access to PHP-FPM
-    mkdir -p /run/php-fpm && \
-    sed -i '/^listen = /clisten = 0.0.0.0:9000' /etc/php-fpm.d/www.conf && \
-    sed -i '/^listen.allowed_clients/c;listen.allowed_clients =' /etc/php-fpm.d/www.conf \
-    && \
-    # Redirect worker output to stdout for container logging
-    sed -i '/^;catch_workers_output/ccatch_workers_output = yes' /etc/php-fpm.d/www.conf
-
-EXPOSE 9000
-
+# Set working directory
 WORKDIR /var/www
 
-CMD ["/sbin/php-fpm", "-F", "-O"]
+# Install dependencies
+RUN apt-get update          \
+    && apt-get install -y   \
+    wget                    \
+    unzip                   \
+    && apt-get clean        \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN mkdir /opt/oracle
+# Install Oracle Instantclient
+RUN wget https://download.oracle.com/otn_software/linux/instantclient/216000/instantclient-basic-linux.x64-21.6.0.0.0dbru.zip \
+&& wget https://download.oracle.com/otn_software/linux/instantclient/216000/instantclient-sdk-linux.x64-21.6.0.0.0dbru.zip \
+&& wget https://download.oracle.com/otn_software/linux/instantclient/216000/instantclient-sqlplus-linux.x64-21.6.0.0.0dbru.zip \
+&& unzip instantclient-basic-linux.x64-21.6.0.0.0dbru.zip -d /opt/oracle \
+&& unzip instantclient-sdk-linux.x64-21.6.0.0.0dbru.zip -d /opt/oracle \
+&& unzip instantclient-sqlplus-linux.x64-21.6.0.0.0dbru.zip -d /opt/oracle \
+&& rm -rf *.zip \
+&& mv /opt/oracle/instantclient_21_6 /opt/oracle/instantclient
+
+#add oracle instantclient path to environment
+ENV LD_LIBRARY_PATH /opt/oracle/instantclient/
+RUN ldconfig
+
+# Install Oracle extensions
+RUN docker-php-ext-configure pdo_oci --with-pdo-oci=instantclient,/opt/oracle/instantclient,21.1 \
+&& echo 'instantclient,/opt/oracle/instantclient/' | pecl install oci8-3.2.1 \
+&& docker-php-ext-install \
+        pdo_oci \
+&& docker-php-ext-enable \
+        oci8
+
+# Install composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+# Add user for laravel application
+RUN groupadd -g 1000 www
+RUN useradd -u 1000 -ms /bin/bash -g www www
+
+# Copy existing application directory contents
+COPY . /var/www
+
+# Copy existing application directory permissions
+COPY --chown=www:www . /var/www
+
+# Change current user to www
+USER www
+
+# Expose port 9000 and start php-fpm server
+EXPOSE 9000
+CMD ["php-fpm"]
