--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /var/www
 # Install dependencies
 RUN apt-get update          \
     && apt-get install -y   \
+    libaio1                 \
     wget                    \
     unzip                   \
     && apt-get clean        \
