--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
     networks:
       - internal
     volumes:
-      - ./php_code:/files:ro
+      - ./php_code/dz:/files:ro
     ports:
       - 9000:9000
     restart: no
@@ -49,7 +49,7 @@ services:
     container_name: nginx.g
     hostname: nginx.g
     volumes:
-      - ./php_code:/files:ro
+      - ./php_code/dz:/files:ro
     networks:
       - internal
     ports:
